--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3052351640100142" crossorigin="anonymous"></script>
     </head>
     <body>
+        <a href="ceiling.html">정가 통계로 이동</a>
         <div>
             <p id="current_date">현재 날짜</p>
         </div>
