--- a/ceiling.html
+++ b/ceiling.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3052351640100142" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -208,7 +209,7 @@
             day = targetDate.getDate();
             const today = document.getElementById("current_date").valueAsDate;
             const diff = (today - targetDate) / millisecondsPerDay
-            li.textContent = `${olds[i].name} (${year}-${month}-${day}, ${diff})`
+            li.textContent = `${olds[i].name} (${year}-${month}-${day}, ${diff}일)`
         }
 
     </script>
