--- a/ceiling.html
+++ b/ceiling.html
@@ -104,7 +104,7 @@
             },
             {
                 name: "백파이프",
-                date: ["2022-01-21"]
+                date: ["2022-01-21", "2023-07-07"]
             },
             {
                 name: "블레미샤인",
@@ -138,7 +138,7 @@
             },
             {
                 name: "스카디",
-                date: ["2021-01-08", "2021-11-26", "2022-05-13"]
+                date: ["2021-01-08", "2021-11-26", "2022-05-13", "2023-06-23"]
             },
             {
                 name: "시즈",
@@ -213,7 +213,7 @@
             },
             {
                 name: "패신저",
-                date: ["2023-01-01"]
+                date: ["2023-01-01", "2023-06-09"]
             },
         ]
         const millisecondsPerDay = 1000 * 60 * 60 * 24;
